--- a/src/styles/typography.css
+++ b/src/styles/typography.css
@@ -11,7 +11,7 @@
   font-display: swap;
 }
 
-@font-face {
+/* @font-face {
   font-family: "Gotham Pro";
   src: url("./font/GothamPro-Light.eot");
   src: local("Gotham Pro Light"), local("GothamPro-Light"),
@@ -22,7 +22,7 @@
   font-weight: 300;
   font-style: normal;
   font-display: swap;
-}
+} */
 
 @font-face {
   font-family: "Gotham Pro";
@@ -49,7 +49,7 @@
   font-style: italic;
 }
 
-@font-face {
+/* @font-face {
   font-family: "Gotham Pro";
   src: url("./font/GothamPro-Medium.eot");
   src: local("Gotham Pro Medium"), local("GothamPro-Medium"),
@@ -60,7 +60,7 @@
   font-weight: 500;
   font-style: normal;
   font-display: swap;
-}
+} */
 
 @font-face {
   font-family: "Gotham Pro";
@@ -86,7 +86,7 @@
   font-style: normal;
   font-display: swap;
 }
-
+/*
 @font-face {
   font-family: "Gotham Pro";
   src: url("./font/GothamPro-MediumItalic.eot");
@@ -97,9 +97,9 @@
     url("./font/GothamPro-MediumItalic.ttf") format("truetype");
   font-weight: 500;
   font-style: italic;
-}
+} */
 
-@font-face {
+/* @font-face {
   font-family: "Gotham Pro";
   src: url("./font/GothamPro-BlackItalic.eot");
   src: local("Gotham Pro Black Italic"), local("GothamPro-BlackItalic"),
@@ -109,8 +109,8 @@
     url("./font/GothamPro-BlackItalic.ttf") format("truetype");
   font-weight: 900;
   font-style: italic;
-}
-
+} */
+/*
 @font-face {
   font-family: "Gotham Pro";
   src: url("./font/GothamPro-LightItalic.eot");
@@ -121,4 +121,4 @@
     url("./font/GothamPro-LightItalic.ttf") format("truetype");
   font-weight: 300;
   font-style: italic;
-}
+} */
